// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Select Default 1`] = `
<div
  className="jsx-2198933393"
>
  <label
    className="jsx-2198933393"
  >
    <select
      className="jsx-2198933393 UnSelected"
      disabled={undefined}
      onChange={[Function]}
      required={true}
      value=""
    >
      <option
        className="jsx-2198933393 placeholder"
        disabled={true}
        label={undefined}
        value=""
      />
      <option
        disabled={false}
        label="One"
        value={1}
      >
        One
      </option>
      <option
        disabled={false}
        label="Two"
        value={2}
      >
        Two
      </option>
      <option
        disabled={false}
        label="Three"
        value={3}
      >
        Three
      </option>
      <option
        disabled={false}
        label="Four"
        value={4}
      >
        Four
      </option>
    </select>
    <span
      className="jsx-2198933393 dropdown-icon"
    >
      <svg
        fill="#46515e"
        height={20}
        preserveAspectRatio="xMidYMid meet"
        style={
          Object {
            "color": undefined,
            "verticalAlign": "middle",
          }
        }
        viewBox="0 0 40 40"
        width="1em"
      >
        <g>
          <path
            d="m37.6 18l-16.6 16.6q-0.4 0.4-1 0.4t-1-0.4l-16.6-16.6q-0.4-0.4-0.4-1t0.4-1l3.7-3.7q0.5-0.4 1-0.4t1 0.4l11.9 11.9 11.9-11.9q0.4-0.4 1-0.4t1 0.4l3.7 3.7q0.4 0.4 0.4 1t-0.4 1z"
          />
        </g>
      </svg>
    </span>
  </label>
</div>
`;

exports[`Storyshots Select Default with placeholder 1`] = `
<div
  className="jsx-2198933393"
>
  <label
    className="jsx-2198933393"
  >
    <select
      className="jsx-2198933393 UnSelected"
      disabled={undefined}
      onChange={[Function]}
      required={true}
      value=""
    >
      <option
        className="jsx-2198933393 placeholder"
        disabled={true}
        label="MyPlaceHolder"
        value=""
      >
        MyPlaceHolder
      </option>
      <option
        disabled={false}
        label="One"
        value={1}
      >
        One
      </option>
      <option
        disabled={false}
        label="Two"
        value={2}
      >
        Two
      </option>
      <option
        disabled={false}
        label="Three"
        value={3}
      >
        Three
      </option>
      <option
        disabled={false}
        label="Four"
        value={4}
      >
        Four
      </option>
    </select>
    <span
      className="jsx-2198933393 dropdown-icon"
    >
      <svg
        fill="#46515e"
        height={20}
        preserveAspectRatio="xMidYMid meet"
        style={
          Object {
            "color": undefined,
            "verticalAlign": "middle",
          }
        }
        viewBox="0 0 40 40"
        width="1em"
      >
        <g>
          <path
            d="m37.6 18l-16.6 16.6q-0.4 0.4-1 0.4t-1-0.4l-16.6-16.6q-0.4-0.4-0.4-1t0.4-1l3.7-3.7q0.5-0.4 1-0.4t1 0.4l11.9 11.9 11.9-11.9q0.4-0.4 1-0.4t1 0.4l3.7 3.7q0.4 0.4 0.4 1t-0.4 1z"
          />
        </g>
      </svg>
    </span>
  </label>
</div>
`;

exports[`Storyshots Select Disabled 'Four' option 1`] = `
<div
  className="jsx-2198933393"
>
  <label
    className="jsx-2198933393"
  >
    <select
      className="jsx-2198933393 UnSelected"
      disabled={undefined}
      onChange={[Function]}
      required={true}
      value=""
    >
      <option
        className="jsx-2198933393 placeholder"
        disabled={true}
        label={undefined}
        value=""
      />
      <option
        disabled={false}
        label="One"
        value="one"
      >
        One
      </option>
      <option
        disabled={false}
        label="Two"
        value="two"
      >
        Two
      </option>
      <option
        disabled={false}
        label="Three"
        value="three"
      >
        Three
      </option>
      <option
        disabled={true}
        label="Hidden Four"
        value="hidden-four"
      >
        Hidden Four
      </option>
    </select>
    <span
      className="jsx-2198933393 dropdown-icon"
    >
      <svg
        fill="#46515e"
        height={20}
        preserveAspectRatio="xMidYMid meet"
        style={
          Object {
            "color": undefined,
            "verticalAlign": "middle",
          }
        }
        viewBox="0 0 40 40"
        width="1em"
      >
        <g>
          <path
            d="m37.6 18l-16.6 16.6q-0.4 0.4-1 0.4t-1-0.4l-16.6-16.6q-0.4-0.4-0.4-1t0.4-1l3.7-3.7q0.5-0.4 1-0.4t1 0.4l11.9 11.9 11.9-11.9q0.4-0.4 1-0.4t1 0.4l3.7 3.7q0.4 0.4 0.4 1t-0.4 1z"
          />
        </g>
      </svg>
    </span>
  </label>
</div>
`;

exports[`Storyshots Select Hidden 'Four' option 1`] = `
<div
  className="jsx-2198933393"
>
  <label
    className="jsx-2198933393"
  >
    <select
      className="jsx-2198933393 UnSelected"
      disabled={undefined}
      onChange={[Function]}
      required={true}
      value=""
    >
      <option
        className="jsx-2198933393 placeholder"
        disabled={true}
        label={undefined}
        value=""
      />
      <option
        disabled={false}
        label="One"
        value="one"
      >
        One
      </option>
      <option
        disabled={false}
        label="Two"
        value="two"
      >
        Two
      </option>
      <option
        disabled={false}
        label="Three"
        value="three"
      >
        Three
      </option>
    </select>
    <span
      className="jsx-2198933393 dropdown-icon"
    >
      <svg
        fill="#46515e"
        height={20}
        preserveAspectRatio="xMidYMid meet"
        style={
          Object {
            "color": undefined,
            "verticalAlign": "middle",
          }
        }
        viewBox="0 0 40 40"
        width="1em"
      >
        <g>
          <path
            d="m37.6 18l-16.6 16.6q-0.4 0.4-1 0.4t-1-0.4l-16.6-16.6q-0.4-0.4-0.4-1t0.4-1l3.7-3.7q0.5-0.4 1-0.4t1 0.4l11.9 11.9 11.9-11.9q0.4-0.4 1-0.4t1 0.4l3.7 3.7q0.4 0.4 0.4 1t-0.4 1z"
          />
        </g>
      </svg>
    </span>
  </label>
</div>
`;

exports[`Storyshots Select With error feedback 1`] = `
<div
  className="jsx-2198933393"
>
  <label
    className="jsx-2198933393"
  >
    <select
      className="jsx-2198933393 hasError UnSelected"
      disabled={undefined}
      onChange={[Function]}
      required={true}
      value=""
    >
      <option
        className="jsx-2198933393 placeholder"
        disabled={true}
        label={undefined}
        value=""
      />
      <option
        disabled={false}
        label="One"
        value={1}
      >
        One
      </option>
      <option
        disabled={false}
        label="Two"
        value={2}
      >
        Two
      </option>
      <option
        disabled={false}
        label="Three"
        value={3}
      >
        Three
      </option>
      <option
        disabled={false}
        label="Four"
        value={4}
      >
        Four
      </option>
    </select>
    <span
      className="jsx-2198933393 dropdown-icon"
    >
      <svg
        fill="#46515e"
        height={20}
        preserveAspectRatio="xMidYMid meet"
        style={
          Object {
            "color": undefined,
            "verticalAlign": "middle",
          }
        }
        viewBox="0 0 40 40"
        width="1em"
      >
        <g>
          <path
            d="m37.6 18l-16.6 16.6q-0.4 0.4-1 0.4t-1-0.4l-16.6-16.6q-0.4-0.4-0.4-1t0.4-1l3.7-3.7q0.5-0.4 1-0.4t1 0.4l11.9 11.9 11.9-11.9q0.4-0.4 1-0.4t1 0.4l3.7 3.7q0.4 0.4 0.4 1t-0.4 1z"
          />
        </g>
      </svg>
    </span>
  </label>
  <span
    className="jsx-3092314264"
  >
    Error message here
  </span>
</div>
`;

exports[`Storyshots Select With help feedback 1`] = `
<div
  className="jsx-2198933393"
>
  <label
    className="jsx-2198933393"
  >
    <select
      className="jsx-2198933393 UnSelected"
      disabled={undefined}
      onChange={[Function]}
      required={true}
      value=""
    >
      <option
        className="jsx-2198933393 placeholder"
        disabled={true}
        label={undefined}
        value=""
      />
      <option
        disabled={false}
        label="One"
        value={1}
      >
        One
      </option>
      <option
        disabled={false}
        label="Two"
        value={2}
      >
        Two
      </option>
      <option
        disabled={false}
        label="Three"
        value={3}
      >
        Three
      </option>
      <option
        disabled={false}
        label="Four"
        value={4}
      >
        Four
      </option>
    </select>
    <span
      className="jsx-2198933393 dropdown-icon"
    >
      <svg
        fill="#46515e"
        height={20}
        preserveAspectRatio="xMidYMid meet"
        style={
          Object {
            "color": undefined,
            "verticalAlign": "middle",
          }
        }
        viewBox="0 0 40 40"
        width="1em"
      >
        <g>
          <path
            d="m37.6 18l-16.6 16.6q-0.4 0.4-1 0.4t-1-0.4l-16.6-16.6q-0.4-0.4-0.4-1t0.4-1l3.7-3.7q0.5-0.4 1-0.4t1 0.4l11.9 11.9 11.9-11.9q0.4-0.4 1-0.4t1 0.4l3.7 3.7q0.4 0.4 0.4 1t-0.4 1z"
          />
        </g>
      </svg>
    </span>
  </label>
  <span
    className="jsx-3483989303"
  >
    A helpful message here
  </span>
</div>
`;

exports[`Storyshots Select With label NOT filled 1`] = `
<div
  className="jsx-2198933393"
>
  <label
    className="jsx-2198933393"
  >
    <div
      className="jsx-2198933393"
    >
      <span
        className="jsx-1620445214"
      >
        Choose number
      </span>
    </div>
    <select
      className="jsx-2198933393 UnSelected"
      disabled={undefined}
      onChange={[Function]}
      required={true}
      value=""
    >
      <option
        className="jsx-2198933393 placeholder"
        disabled={true}
        label={undefined}
        value=""
      />
      <option
        disabled={false}
        label="One"
        value={1}
      >
        One
      </option>
      <option
        disabled={false}
        label="Two"
        value={2}
      >
        Two
      </option>
      <option
        disabled={false}
        label="Three"
        value={3}
      >
        Three
      </option>
      <option
        disabled={false}
        label="Four"
        value={4}
      >
        Four
      </option>
    </select>
    <span
      className="jsx-2198933393 dropdown-icon"
    >
      <svg
        fill="#46515e"
        height={20}
        preserveAspectRatio="xMidYMid meet"
        style={
          Object {
            "color": undefined,
            "verticalAlign": "middle",
          }
        }
        viewBox="0 0 40 40"
        width="1em"
      >
        <g>
          <path
            d="m37.6 18l-16.6 16.6q-0.4 0.4-1 0.4t-1-0.4l-16.6-16.6q-0.4-0.4-0.4-1t0.4-1l3.7-3.7q0.5-0.4 1-0.4t1 0.4l11.9 11.9 11.9-11.9q0.4-0.4 1-0.4t1 0.4l3.7 3.7q0.4 0.4 0.4 1t-0.4 1z"
          />
        </g>
      </svg>
    </span>
  </label>
</div>
`;

exports[`Storyshots Select With label filled 1`] = `
<div
  className="jsx-2198933393"
>
  <label
    className="jsx-2198933393"
  >
    <div
      className="jsx-2198933393"
    >
      <span
        className="jsx-2886444718"
      >
        Choose number
      </span>
    </div>
    <select
      className="jsx-2198933393 "
      disabled={undefined}
      onChange={[Function]}
      required={true}
      value="2"
    >
      <option
        className="jsx-2198933393 placeholder"
        disabled={true}
        label={undefined}
        value=""
      />
      <option
        disabled={false}
        label="One"
        value={1}
      >
        One
      </option>
      <option
        disabled={false}
        label="Two"
        value={2}
      >
        Two
      </option>
      <option
        disabled={false}
        label="Three"
        value={3}
      >
        Three
      </option>
      <option
        disabled={false}
        label="Four"
        value={4}
      >
        Four
      </option>
    </select>
    <span
      className="jsx-2198933393 dropdown-icon"
    >
      <svg
        fill="#46515e"
        height={20}
        preserveAspectRatio="xMidYMid meet"
        style={
          Object {
            "color": undefined,
            "verticalAlign": "middle",
          }
        }
        viewBox="0 0 40 40"
        width="1em"
      >
        <g>
          <path
            d="m37.6 18l-16.6 16.6q-0.4 0.4-1 0.4t-1-0.4l-16.6-16.6q-0.4-0.4-0.4-1t0.4-1l3.7-3.7q0.5-0.4 1-0.4t1 0.4l11.9 11.9 11.9-11.9q0.4-0.4 1-0.4t1 0.4l3.7 3.7q0.4 0.4 0.4 1t-0.4 1z"
          />
        </g>
      </svg>
    </span>
  </label>
</div>
`;

exports[`Storyshots Select With label with help 1`] = `
<div
  className="jsx-2198933393"
>
  <label
    className="jsx-2198933393"
  >
    <div
      className="jsx-2198933393"
    >
      <span
        className="jsx-1620445214"
      >
        Choose number
      </span>
    </div>
    <select
      className="jsx-2198933393 UnSelected"
      disabled={undefined}
      onChange={[Function]}
      required={true}
      value=""
    >
      <option
        className="jsx-2198933393 placeholder"
        disabled={true}
        label={undefined}
        value=""
      />
      <option
        disabled={false}
        label="One"
        value={1}
      >
        One
      </option>
      <option
        disabled={false}
        label="Two"
        value={2}
      >
        Two
      </option>
      <option
        disabled={false}
        label="Three"
        value={3}
      >
        Three
      </option>
      <option
        disabled={false}
        label="Four"
        value={4}
      >
        Four
      </option>
    </select>
    <span
      className="jsx-2198933393 dropdown-icon"
    >
      <svg
        fill="#46515e"
        height={20}
        preserveAspectRatio="xMidYMid meet"
        style={
          Object {
            "color": undefined,
            "verticalAlign": "middle",
          }
        }
        viewBox="0 0 40 40"
        width="1em"
      >
        <g>
          <path
            d="m37.6 18l-16.6 16.6q-0.4 0.4-1 0.4t-1-0.4l-16.6-16.6q-0.4-0.4-0.4-1t0.4-1l3.7-3.7q0.5-0.4 1-0.4t1 0.4l11.9 11.9 11.9-11.9q0.4-0.4 1-0.4t1 0.4l3.7 3.7q0.4 0.4 0.4 1t-0.4 1z"
          />
        </g>
      </svg>
    </span>
  </label>
  <span
    className="jsx-3483989303"
  >
    Helpful feedback
  </span>
</div>
`;
